added search to tables in templates

--- a/templates/inventory/category.html
+++ b/templates/inventory/category.html
@@ -12,7 +12,6 @@
 
     <!-- Form per creare una nuova categoria -->
     <div class="mb-4">
-        
         <div class="collapse mt-3" id="createCategoryForm">
             <div class="card">
                 <div class="card-body">
@@ -26,12 +25,17 @@
         </div>
     </div>
 
+    <!-- Campo di ricerca -->
+    <div class="m-3">
+        <input type="text" id="searchInput" class="form-control" placeholder="Cerca categoria...">
+    </div>
+
     <!-- Lista delle categorie -->
     <div class="mt-4">
         <h3 class="h5">Lista Categorie</h3>
-        <ul class="list-group">
+        <ul class="list-group" id="categoryList">
             {% for category in categories %}
-                <li class="list-group-item">
+                <li class="list-group-item category-item">
                     <div class="d-flex justify-content-between align-items-center">
                         <span>{{ category.parent }} - {{ category.name }}</span>
                         <div>
@@ -71,4 +75,21 @@
         </ul>
     </div>
 </div>
+
+<!-- Script di ricerca -->
+<script>
+    $(document).ready(function () {
+        $('#searchInput').on('keyup', function () {
+            var query = $(this).val().toLowerCase();
+            $('.category-item').each(function () {
+                var categoryText = $(this).find('span').text().toLowerCase(); // Testo della categoria
+                if (categoryText.includes(query)) {
+                    $(this).show();
+                } else {
+                    $(this).hide();
+                }
+            });
+        });
+    });
+</script>
 {% endblock dashboard_app %}
