--- a/templates/inventory/product.html
+++ b/templates/inventory/product.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block dashboard_app %}
+
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center">
         <h2 class="h4">Prodotti</h2>
@@ -10,14 +11,13 @@
         </button>
     </div>
 
-    <!-- Form per creare un nuovo prodotto -->
     <div class="mb-4">
         <div class="collapse mt-3" id="createProductForm">
             <div class="card">
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ product_form.as_p }}
+                        {{ create_form.as_p }}
                         <button type="submit" name="create_product" class="btn bg-dark text-white">Crea Prodotto</button>
                     </form>
                 </div>
@@ -30,67 +30,82 @@
         <input type="text" id="searchInput" class="form-control" placeholder="Cerca prodotto...">
     </div>
 
-    <!-- Lista dei prodotti -->
+    <!-- Tabella dei prodotti -->
     <div class="mt-4">
         <h3 class="h5">Lista Prodotti</h3>
-        <ul class="list-group" id="productList">
-            {% for product in products %}
-                <li class="list-group-item product-item">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <span>{{ product.name }} - {{ product.internal_code }} - {{ product.category }}</span>
-                        <span>Quantità: {{ product.stock_quantity }}</span>
-                        <div>
+        <table id="productTable" class="table table-bordered w-100">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Categoria</th>
+                    <th>Prezzo Unitario</th>
+                    <th>Unità in magazzino</th>
+                    <th>Visibile nel sito</th>
+                    <th>Azioni</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for info in product_forms %}
+                    <tr class="product-item">
+                        <td>{{ info.product.name }}</td>
+                        <td>{{ info.product.category.name }}</td>
+                        <td>€{{ info.product.unit_price }}</td>
+                        <td>{{ info.product.stock_quantity }}</td>
+                        <td>{{ info.product.is_visible }}</td>
+                        <td class="col-md-3">
                             <!-- Form per eliminare un prodotto -->
                             <form method="post" style="display:inline;">
                                 {% csrf_token %}
-                                <input type="hidden" name="product_id" value="{{ product.id }}">
+                                <input type="hidden" name="product_id" value="{{ info.product.id }}">
                                 <button type="submit" name="delete_product" class="btn btn-danger btn-sm">
                                     <i class="fas fa-trash-alt"></i>
                                 </button>
                             </form>
 
                             <!-- Pulsante per mostrare il form di modifica -->
-                            <button class="btn bg-dark text-white btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#updateForm-{{ product.id }}" aria-expanded="false" aria-controls="updateForm-{{ product.id }}">
+                            <button class="btn bg-dark text-white btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#updateForm-{{ info.product.id }}" aria-expanded="false" aria-controls="updateForm-{{ info.product.id }}">
                                 Modifica
                             </button>
-                        </div>
-                    </div>
-
-                    <!-- Form per aggiornare un prodotto -->
-                    <div class="collapse mt-3" id="updateForm-{{ product.id }}">
-                        <div class="card">
-                            <div class="card-body">
-                                <form method="post">
-                                    {% csrf_token %}
-                                    {{ product_form.as_p }}
-                                    <input type="hidden" name="product_id" value="{{ product.id }}">
-                                    <button type="submit" name="update_product" class="btn bg-dark text-white">Salva Modifiche</button>
-                                </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            <!-- Form per aggiornare un prodotto -->
+                            <div class="collapse mt-3" id="updateForm-{{ info.product.id }}">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <form method="post" enctype="multipart/form-data">
+                                            {% csrf_token %}
+                                            {{ info.form.as_p }}
+                                            <input type="hidden" name="product_id" value="{{ info.product.id }}">
+                                            <button type="submit" name="update_product" class="btn bg-dark text-white">Salva Modifiche</button>
+                                        </form>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </li>
-            {% empty %}
-                <li class="list-group-item">Nessun prodotto disponibile.</li>
-            {% endfor %}
-        </ul>
+                        </td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="4">Nessun prodotto disponibile.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 
 <!-- Script di ricerca -->
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var searchInput = document.getElementById('searchInput');
-        searchInput.addEventListener('keyup', function () {
-            var query = searchInput.value.toLowerCase();
-            var productItems = document.querySelectorAll('.product-item');
-            
-            productItems.forEach(function (item) {
-                var productText = item.textContent.toLowerCase();
-                if (productText.includes(query)) {
-                    item.style.display = '';
+    $(document).ready(function () {
+        $('#searchInput').on('keyup', function () {
+            var query = $(this).val().toLowerCase();
+            $('.product-item').each(function () {
+                var productName = $(this).find('td').first().text().toLowerCase(); // Nome del prodotto
+                if (productName.includes(query)) {
+                    $(this).show();
                 } else {
-                    item.style.display = 'none';
+                    $(this).hide();
                 }
             });
         });
